kubernetes/services/stirling-pdf/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stirling-pdf
  labels:
    name: stirling-pdf
    type: productivity
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
